base/src/test/resources/failure/patterns/not-enough-pat.aya.txt
In file $FILE:4:9 ->

  2 | 
  3 | def ifElse {A : Type} (b : Bool) (x y : A) : A
  4 |  | true, x => x
               ^^

Error: There is no pattern for the param
         (y : A)
       to match against

1 error(s), 0 warning(s).
What are you doing?
